--- a/src/test/sql/README
+++ b/src/test/sql/README
@@ -17,7 +17,7 @@ Then you can run a simple test in the regress directory
 
 By the way ypu update the README file for run_test.pl in the file I coppiedform 
 
-./run_test.pl --verbose --spatial_ref_sys resolve_overlap_and_gap
+./run_test.pl --verbose --spatial_ref_sys --topology resolve_overlap_and_gap
 
 
 
